@@ -21,13 +21,32 @@ start/stop it from the control panel as well as running it as a normal
 executable.
 
 When running as a service, the configuration file used is mosquitto.conf in the
-directory that you installed to.
+directory defined by the %MOSQUITTO_DIR% environment variable. This will be set
+to the directory that you installed to by default.
 
 If you want to install/uninstall mosquitto as a Windows service run from the
 command line as follows:
 
 C:\Program Files\mosquitto\mosquitto install
 C:\Program Files\mosquitto\mosquitto uninstall
+
+It is possible to install and run multiple instances of a Mosquitto service, as
+of version 2.1. To do this, copy the mosquitto executable to a new *name* and
+run the service install as above. The service will load a configuration file
+mosquitto.conf from the directory defined by the environment variable
+"<executable_name>_DIR". For this reason it is suggested to keep the executable
+name consisting of alphanumeric and '_' characters. Any other character will be
+replaced with '_'.
+
+For example, if you copy mosquitto.exe to eclipse_mosquitto.exe, you would run
+these commands to install/uninstall:
+
+C:\Program Files\mosquitto\eclipse_mosquitto install
+C:\Program Files\mosquitto\eclipse_mosquitto uninstall
+
+And the service would try to load the config file at %ECLIPSE_MOSQUITTO_DIR%/mosquitto.conf
+
+The new service will appear in the service list as "Mosquitto Broker (eclipse_mosquitto.exe)".
 
 Logging
 -------
