@@ -82,6 +82,8 @@ Broker:
   client connects with the same client id. Closes #2340.
 - Add support for sending the SIGRTMIN signal to trigger log rotation.
   Closes #2337.
+- Allow multiple instances of mosquitto to run as services on Windows. See
+  README-windows.txt.
 
 Client library:
 - Add MOSQ_OPT_DISABLE_SOCKETPAIR to allow the disabling of the socketpair
